--- a/Language_Translator_App/index.html
+++ b/Language_Translator_App/index.html
@@ -19,26 +19,18 @@
         <ul class="controls">
             <li class="row form">
                 <div class="icons">
-                    <i class="fa-solid fa-volume-high"></i>
-                    <i class="fa-solid fa-copy"></i>
+                    <i id="from" class="fa-solid fa-volume-high"></i>
+                    <i id="from" class="fa-solid fa-copy"></i>
                 </div>
-                <select>
-                    <option value="en-Us">English</option>
-                    <option value="ur-PK">Urdu</option>
-                    <option value="hi-IN">Hindi</option>
-                </select>
+                <select></select>
             </li>
 <li class="exchange"><i class="fa-solid fa-right-left"></i></li>
             <li class="row to">
-                <select>
-                    <option value="en-Us">English</option>
-                    <option value="ur-PK">Urdu</option>
-                    <option value="hi-IN">Hindi</option>
-                </select>
+                <select></select>
 
                 <div class="icons">
-                    <i class="fa-solid fa-volume-high"></i>
-                    <i class="fa-solid fa-copy"></i>
+                    <i id="to" class="fa-solid fa-volume-high"></i>
+                    <i id="to" class="fa-solid fa-copy"></i>
                 </div>
                
             </li>
@@ -46,21 +38,8 @@
     </div>
     <button>Translate Text</button>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="app.js"></script>
+<script src="countries.js"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
