--- a/Language_Translator_App/index.html
+++ b/Language_Translator_App/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Language Translator App</title>
+    <link rel="icon" type="" href="language-translation-icon-free-vector.jpg">
 </head>
 
 <body>
+   
 <div class="container">
     <div class="wrapper">
         <div class="text-input">
